--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+1.1.3
+- tekst edit fields (search fields) didn't work on the latest firmwares
+- user settings move to /mnt/data/tsc/ov.userSettings.json
+- for firmware 5 only, compatibilty with older firmwares has been dropped.
+
 1.1.2
 - made compatible with firmware 5.9.6
 
