--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+1.1.4
+- dimmableColors update
+
 1.1.3
 - tekst edit fields (search fields) didn't work on the latest firmwares
 - user settings move to /mnt/data/tsc/ov.userSettings.json
